# inventory_management_system

./: .gitignore  DockerFile  pyproject.toml  requirements.txt
accounts/: urls.py  views.py
accounts/templates/accounts/: login.html  register.html
drf_inventory/: apps.py  serializers.py  urls.py  views.py
inventory/: admin.py  forms.py  models.py  urls.py  views.py
inventory/migrations/: 0001_initial.py  0002_purchaseorder_product_purchaseorder_qty_and_more.py  0003_alter_purchasehistory_options_and_more.py  0004_rename_vendor_id_product_vendor.py
inventory/static/inventory/css/: style.css
inventory/templates/inventory/: delete_product.html  delete_vendor.html  home.html  product_form.html  products_details.html  products_list.html  purchase_orders_delete.html  purchase_orders_details.html  purchase_orders_form.html  purchase_orders_list.html  test.html  vendor_details.html  vendor_form.html  vendors_list.html
inventory_management/: asgi.py  settings.py  urls.py  wsgi.py
static/css/: style.css
templates/: base.html  footer.html  navbar.html
